# s7-faq-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
notebooks/: agent.html  agent.py
src/: agent.py  server.py
